crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__order_relative_imports_by_level.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
order_relative_imports_by_level.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from .a import a
2 | | from ..a import a
3 | | from ..b import a
4 | | from .b import a
  | |________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1   |-from .a import a
2 1 | from ..a import a
3 2 | from ..b import a
  3 |+from .a import a
4 4 | from .b import a
