crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__preserve_import_star.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
preserve_import_star.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from some_other_module import some_class
2 | | from some_other_module import *
3 | | # Above
4 | | from some_module import some_class  # Aside
5 | | # Above
6 | | from some_module import *  # Aside
  | |_________________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1   |-from some_other_module import some_class
2   |-from some_other_module import *
3 1 | # Above
4   |-from some_module import some_class  # Aside
5   |-# Above
6 2 | from some_module import *  # Aside
  3 |+
  4 |+# Above
  5 |+from some_module import some_class  # Aside
  6 |+from some_other_module import *
  7 |+from some_other_module import some_class
