crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__preserve_indentation.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
preserve_indentation.py:2:5: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 |   if True:
2 | /     import sys
3 | |     import os
  | |_____________^ I001 (unsorted-imports)
4 |   else:
5 |       import sys
  |
  = help: Organize imports

ℹ Safe fix
1 1 | if True:
  2 |+    import os
2 3 |     import sys
3   |-    import os
4 4 | else:
5 5 |     import sys
6 6 |     import os

preserve_indentation.py:5:5: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
3 |       import os
4 |   else:
5 | /     import sys
6 | |     import os
  | |_____________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
2 2 |     import sys
3 3 |     import os
4 4 | else:
  5 |+    import os
5 6 |     import sys
6   |-    import os
