crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__reorder_within_section.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
reorder_within_section.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import sys
2 | | import os
  | |_________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
  1 |+import os
1 2 | import sys
2   |-import os
