crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_import_with_useless_alias_this_this.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
this_this.py:1:8: PLC0414 (useless-import-alias) Required import does not rename original package.
  |
1 | import this as this
  |        ^^^^^^^^^^^^ PLC0414 (useless-import-alias)
  |
  = help: Change required import or disable rule.
