crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__required_importfrom_with_useless_alias_this_this_from.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
this_this_from.py:1:20: PLC0414 (useless-import-alias) Required import does not rename original package.
  |
1 | from module import this as this
  |                    ^^^^^^^^^^^^ PLC0414 (useless-import-alias)
  |
  = help: Change required import or disable rule.
