crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__sections_main_first_party.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
main_first_party.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / import os
2 | |
3 | | import __main__
4 | | import third_party
5 | |
6 | | import first_party
  | |__________________^ I001 (unsorted-imports)
7 |
8 |   os.a
  |
  = help: Organize imports

ℹ Safe fix
1 1 | import os
2 2 | 
3   |-import __main__
4 3 | import third_party
5 4 | 
  5 |+import __main__
6 6 | import first_party
7 7 | 
8 8 | os.a
