crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__sections_sections.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
sections.py:1:1: I001 (unsorted-imports) [*] Import block is un-sorted or un-formatted
  |
1 | / from __future__ import annotations
2 | | import os
3 | | import sys
4 | | import pytz
5 | | import django.settings
6 | | from library import foo
7 | | from . import local
  | |___________________^ I001 (unsorted-imports)
  |
  = help: Organize imports

ℹ Safe fix
1  1  | from __future__ import annotations
   2  |+
2  3  | import os
3  4  | import sys
   5  |+
4  6  | import pytz
5     |-import django.settings
6  7  | from library import foo
   8  |+
7  9  | from . import local
   10 |+
   11 |+import django.settings
